# LiquidCAN

./: .gitignore  CanProtocol2.0.ods  LiquidCAN.tex  LiquidCAN.yaml  LiquidCAN_generator.py  README.md  bitfieldDocumentation  ci-rust.sh  documentation.aux  documentation.fdb_latexmk  documentation.fls  documentation.out  documentation.tex  documentation.toc  protocol.csv
.github/workflows/: rust.yml
Cpp-Implementation/: LiquidCan.h
Cpp-Implementation/Infrastructure/: CanMessage.h  CanMessageType.h  DataType.h  MessageType.h  ParameterSetStatus.h
Cpp-Implementation/Model/: FieldGetReq.h  FieldGetRes.h  FieldIdLookupReq.h  FieldIdLookupRes.h  FieldRegistration.h  HeartBeat.h  NodeInfoRes.h  ParameterSetConfirmation.h  ParameterSetLock.h  ParameterSetReq.h  Status.h  TelemetryGroupDefinition.h  TelemetryGroupUpdate.h
Cpp-Implementation/Models/: CanMessageType.h  CanProcess.h  CanProcessStatus.h  FieldGetRequest.h  FieldGetResult.h  (+11 more)
liquidcan_rust/: Cargo.toml
liquidcan_rust/liquidcan_rust_macros/: Cargo.toml
liquidcan_rust/liquidcan_rust_macros/liquidcan_rust_macros_derive/: Cargo.toml
liquidcan_rust/liquidcan_rust_macros/liquidcan_rust_macros_derive/src/: lib.rs
liquidcan_rust/liquidcan_rust_macros/src/: lib.rs  padded_enum.rs
liquidcan_rust/src/: can_message.rs  lib.rs  message_conversion.rs  payloads.rs  raw_can_message.rs
sections/: 01_introduction.tex  02_can_id_scheme.tex  03_frame_layout.tex  04_node_registration.tex  05_field_management.tex  06_heartbeats.tex  07_status_messages.tex  08_message_types.tex  09_data_structures.tex  10_versioning.tex
